# robocon_coop_comm

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
docs/: ARCHITECTURE.md  DOJO_END_TO_END.md  FSM_SAFETY_DESIGN.md  HANDOFF_TO_NEXT_CC_SESSION.md  HIKROBOT_6LED_BREADBOARD_TEST.md  HIKROBOT_REAL_CAMERA.md  LED_MCU_LINK.md  LOCAL_DEV_UBUNTU22.md  MCU_PIPELINE_SIM.md  OPERATOR_INPUT.md  PERFORMANCE_BENCHMARK.md  PROTOCOL.md  R1_R2_MISSION_FSM.md  R2_VISION_PIPELINE.md  ROADMAP.md  SERIAL_FRAME.md
firmware/: README_SIXLED_TEST.md
robocon_coop_comm/: __init__.py  apriltag_detector.py  apriltag_roi_mapper.py  beacon_decoder.py  beacon_decoder_apriltag.py  beacon_frame_provider.py  beacon_image.py  beacon_stabilizer.py  beacon_types.py  demo_benchmark.py  demo_cli.py  demo_cv.py  demo_dojo_end_to_end.py  demo_fsm_safety.py  demo_mcu_pipeline.py  demo_operator_pipeline.py  demo_r2_vision_pipeline.py  dojo_end_to_end.py  fake_frame_provider.py  frame_logger.py  hikrobot_frame_provider.py  keyboard_operator.py  led_mcu_client.py  led_mcu_simulator.py  operator_command.py  operator_session.py  pattern_mapper.py  pipeline_benchmark.py  protocol.py  r1_fsm.py  r2_fsm.py  serial_frame.py  serial_transport.py  six_led_decoder.py  sixled_log.py  trace_events.py  trace_export.py
test/: test_apriltag_detector.py  test_apriltag_roi_mapper.py  test_beacon_decoder.py  test_beacon_decoder_apriltag.py  test_beacon_frame_provider.py  test_beacon_image.py  test_beacon_stabilizer.py  test_beacon_types.py  test_dojo_end_to_end.py  (+21 more)
(+31 files in other folders)
